✨ Implement more openAPI features
- additionalProperties
- readOnly / writeOnly
- minLength, maxLength, minimum, maximum, pattern
- nullable attributes can sometimes be null in response generation
- server.url is now taken into account when parsing API specs
